<resources>
    <!-- All comments are notes to translators. -->
    <string name="app_name">Pertemuan6</string>

    <!-- The Help option in the options menu, no more than 30 chars. -->
    <string name="action_help">Help</string>

    <string name="action_language">Language</string>

    <string name="last_seen">Terakhir dilihat:</string>

    <!-- The description includes a parenthetical expression.  -->
    <string name="description">Nougat is a family of confections made with sugar or honey, roasted nuts (almonds, walnuts, pistachios, hazelnuts, and macadamia nuts are common), whipped egg whites, and sometimes chopped candied fruit. It is used in a variety of candy bars and chocolates. </string>

    <!-- The product name includes "Package" to define a pack.  -->
    <string name="nougat">Nougat Candy Package</string>

    <!-- Do not translate.  -->
    <string name="support_phone" translatable="false">0813713713</string>

    <!-- Support Department should be capitalized.  -->
    <string name="help_text">If you need help, contact our Support Department.</string>

    <!-- Do not translate.  -->
    <string name="dial_log_message">Can\'t resolve app for ACTION_DIAL Intent.</string>
    <string name="hitung">Hitung</string>
    <string name="buy">Banyak beli:</string>
    <string name="total">Total Harga:</string>
</resources>